<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">TUBOFSHITOMETER</string>
    <string name="Create_or_Load_User">Create or Load User</string>
    <string name="pick_date">Choose Log Date</string>
    <string name="user_name">Name</string>
    <string name="user_age">Age</string>
    <string name="user_sex">Sex</string>
    <string name="submit_user_info">Get Started</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="create_profile_button">Create Profile Now</string>
    <string name="name_input">name</string>
    <string name="radio_button_sex">Sex</string>

</resources>